<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".UI.MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="555dp"
        android:layout_height="574dp"
        android:background="@drawable/diamond"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="259dp"
        android:layout_height="128dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="0 km/h"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/sd_title"
        android:layout_width="241dp"
        android:layout_height="62dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="SlowDrive"
        android:textAlignment="viewStart"
        android:textSize="45sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/warn"
        app:layout_constraintEnd_toStartOf="@+id/btn_settings"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.395" />

    <ImageView
        android:id="@+id/img_speed_limit"
        android:layout_width="184dp"
        android:layout_height="270dp"
        android:layout_marginStart="340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773"
        app:srcCompat="@drawable/speedlimit" />

    <TextView
        android:id="@+id/speed_limit_unit"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:text="KPH"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_speed_limit"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/img_speed_limit"
        app:layout_constraintTop_toTopOf="@+id/img_speed_limit"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/curr_speed_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAlignment="center"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_speed_limit"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/img_speed_limit"
        app:layout_constraintTop_toTopOf="@+id/img_speed_limit"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/warn"
        android:layout_width="471dp"
        android:layout_height="66dp"
        android:layout_marginTop="132dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="104dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitXY"
        android:src="@drawable/ic_profile"
        android:tint="#7E7E7E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="138dp"
        android:layout_height="85dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/bangers"
        android:gravity="center"
        android:shadowColor="#00FFFFFF"
        android:text="Start"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


</androidx.constraintlayout.widget.ConstraintLayout>
