...
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_settings"
            android:layout_width="106dp"
            android:layout_height="65dp"
            android:layout_weight="0"
            android:backgroundTint="#FFEB3B"
            android:contentDescription="TODO"
            app:srcCompat="@android:drawable/ic_menu_revert" />
...
                android:layout_height="423dp"
                android:layout_weight="1"
                android:background="#F9F9F9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Profile_hint"
                    android:layout_width="397dp"
                    android:layout_height="65dp"
                    android:background="#F9F9F9"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:text="Profile"
...
                        android:text="Email Address"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/emailPrompt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F9F9F9"
                        android:ems="10"
                        android:paddingLeft="20dp"
                        android:textAlignment="textStart"
...
                        android:text="Current Password:"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/currPassPrompt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F9F9F9"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
...
                        android:text="New Pasword:"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/newPassPrompt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F9F9F9"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
...
                        android:text="Confirm Pasword:"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/confirmPassPrompt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#F9F9F9"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
...
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#F9F9F9"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/PasswordAuthentication"
                        android:layout_width="372dp"
                        android:layout_height="match_parent"
                        android:background="#F9F9F9"
                        android:textAlignment="textStart"
                        android:textColor="#A10707"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/password_submit"
                        android:layout_width="112dp"
                        android:layout_height="wrap_content"
                        android:background="#F9F9F9"
                        android:backgroundTint="#FFEB3B"
                        android:gravity="center"
                        android:text="@string/submit" />
...
                    android:textAlignment="textStart"
                    android:textColor="#252525"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

                <Switch
                    android:id="@+id/sw_use_sound"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFEB3B"
                    android:fontFamily="@font/hind_light"
                    android:paddingLeft="20dp"
                    android:text="Use sound notification"
                    android:textSize="18sp"
                    android:thumbTint="#FFC107" />

                <Switch
                    android:id="@+id/swch_metric"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFEB3B"
                    android:fontFamily="@font/hind_light"
                    android:paddingLeft="20dp"
                    android:text="Metric Units"
                    android:textSize="18sp"
                    android:thumbTint="#FFC107" />

                <Switch
                    android:id="@+id/sw_speed_limit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFEB3B"
                    android:fontFamily="@font/hind_light"
                    android:paddingLeft="20dp"
...
                        android:gravity="center_vertical"
                        android:text="Volume"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <SeekBar
                        android:id="@+id/volume_bar"
                        style="@style/Widget.AppCompat.SeekBar"
                        android:layout_width="169dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:progressTint="#FFC107"
                        android:thumb="@drawable/thumb_settings"
...
                    android:paddingLeft="20dp"
                    android:text="Request in background"
                    android:textSize="18sp"
                    android:thumbTint="#FFC107" />

                <Button
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFEB3B"
                    android:text="Logout"
...
