...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.86" />

            <Button
                android:id="@+id/temp_button_to_main"
                android:layout_width="199dp"
                android:layout_height="68dp"
                android:text="Log-in as Guest"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
...
