<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.UI.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/username_li"
            android:layout_width="360dp"
            android:layout_height="80dp"
            android:layout_marginTop="166dp"
            android:layout_marginBottom="239dp"
            android:ems="10"
            android:hint="Username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.168" />

        <EditText
            android:id="@+id/password_li"
            android:layout_width="360dp"
            android:layout_height="80dp"
            android:layout_marginBottom="80dp"
            android:ems="10"
            android:hint="Password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_li"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/login_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFEB3B"
            android:text="@string/login"
            android:textColor="#706F6F"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_li"
            app:layout_constraintVertical_bias="0.144" />

        <ImageButton
            android:id="@+id/back_login"
            android:layout_width="75dp"
            android:layout_height="65dp"
            android:backgroundTint="#FFEB3B"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.171"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <TextView
            android:id="@+id/message_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_message"
            android:textColor="#FF0000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_li"
            app:layout_constraintVertical_bias="0.028" />;
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_submit"
            app:layout_constraintVertical_bias="0.157" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>